added text to tweet counts map

--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
 	<div id="TweetsByDay">
 		<p><b>How much did different states tweet about COVID-19 in March?</b> Click on a state to see how many tweets mentioned COVID-19 for each date in the month of March.</p>
 		<div id="TweetsByDay-map"></div>
-		<div id="TweetsByDay-bars"></div>
+		<div id="TweetsByDay-bars">
+			
+			<div id="TweetsByDay-info">
+				<div id='viz1-statename'>California</div>
+				<div>Population: <span id='viz1-population'>178,706,5</span></div>
+
+			</div>
+		</div>
+
 
 	</div>
 
