styling bar charts

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			
 			<div id="TweetsByDay-info">
 				<div id='viz1-statename'>California</div>
-				<div>Population: <span id='viz1-population'>178,706,5</span></div>
+				<div>Population: <span id='viz1-population'>39,512,223</span></div>
 
 			</div>
 		</div>
@@ -72,7 +72,8 @@
 		<div class='content'>
 			<b>What did people talk about?</b> Some accounts tweet the same hashtags over and over. These hastags are politically charged. See bar plots below.
 		</div>
-		<div id="HashtagsBars"></div>
+		<div id="HashtagsBarsLeft" class='hbars'></div>
+		<div id="HashtagsBarsRight" class='hbars'></div>
 		<div style="clear:both;"></div>
 	</div>
 
