--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
 <body>
 	<div id='top-header'>
 		<div class='content'>
-			#COVID Twitter Dashboard
+			<div style='width:100%;text-align:center;font-weight:bold;font-size:1.5em;'>#COVID-19 DISCOURSE ON TWITTER</div>
+			<img src='img/twitter.png' width="100px" style='position:relative; margin:auto;display:block;'/>
 			<p id='intro'>
-				The <a href='https://www.who.int/emergencies/diseases/novel-coronavirus-2019'>Coronavirus pandmemic</a> hit the United States in early spring, 2020. As common in times of crisis, millions of Americans took to Twitter to share and discuss information about Covid19.<br/><br/> 
+				The <a href='https://www.who.int/emergencies/diseases/novel-coronavirus-2019' target="_blank">COVID-19 pandmemic</a> hit the United States in early spring, 2020. As common in times of crisis, millions of Americans took to Twitter to share and discuss information about COVID-19.<br/><br/> 
 				
-				We analyzed tweets originating in the United States<sup>1</sup> between March 1 and March 30 to track how the conversation evolved over time. Scroll down to explore how the conversation evolved over time. 
+				We analyzed tweets originating in the United States<sup>1</sup> between March 1 and March 30 of 2020 to track how the conversation evolved over time. Scroll down to explore. 
 			</p>
+
+			<div class='footnotes' style='font-size:12px;margin:auto;width:100%; text-align:left;max-width:700px'>
+				1. The <a target="_blank" href='https://github.com/echen102/COVID-19-TweetIDs'>COVID-19-TweetIDs</a> dataset was collected ias the Twitter API over the course of the pandemic. The dataset comprises 1% of the total Twitter converstaion, randomly selected by the Twitter API. <br/>
+			</div>
 		</div>
 	</div>
 	<div id="TweetsByDay">
@@ -41,10 +46,10 @@
 	<div id='sentiment-context' class='context-container'>
 		<div class='content'>
 			<div style="float:left;width:50%">
-				<b>How do we feel about Coronavirus?</b>
+				<b>How does COVID-19 feel?</b>
 				Twitter users expressed a wide range of emotions about Covid19 in March.
 				<br/><br/>
-				The interactive map below reflects daily average sentiment scores in USA for every day in March. Evidently, the <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>shelter in place</span> orders that came into effect in the middle of the month correlated with a systematic shift in sentiment across the country. 
+				The interactive map below reflects daily average sentiment scores in USA for every day of the month. Evidently, the <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>shelter in place</span> orders that came into effect in the middle of the month correlated with a systematic shift in sentiment across the country. 
 
 				<br/><br/>
 
@@ -62,7 +67,7 @@
 	<div id="SentimentGrid"></div>
 
 	<div class='footnotes' style='font-size:12px;margin:20px 0px;width:100%; text-align:center;'>
-		<a href='https://github.com/cjhutto/vaderSentiment'>Vader</a> sentiment analysis tool was used to score each tweet on a sentiment scale from -1 to 1. 
+		<a href='https://github.com/cjhutto/vaderSentiment' target="_blank">Vader</a> sentiment analysis tool was used to score each tweet on a sentiment scale from -1 to 1. 
 	</div>
 	
 
@@ -85,8 +90,8 @@
 		</div>
  -->
 		<div class='footnotes' style='font-size:12px;margin:20px 0px;width:100%; text-align:center;'>
-			2. Matt Kapko, <a href="https://www.cio.com/article/3137513/twitters-impact-on-2016-presidential-election-is-unmistakable.html">Twitter's impact on 2016 presidential election is unmistakable</a>,<br/>
-			Grinberg et al, 2019. <a href="https://science.sciencemag.org/content/363/6425/374">Fake news on Twitter during the 2016 U.S. presidential election</a>
+			2. Matt Kapko, <a target="_blank" href="https://www.cio.com/article/3137513/twitters-impact-on-2016-presidential-election-is-unmistakable.html">Twitter's impact on 2016 presidential election is unmistakable</a>,<br/>
+			Grinberg et al, 2019. <a target="_blank" href="https://science.sciencemag.org/content/363/6425/374">Fake news on Twitter during the 2016 U.S. presidential election</a>
 		</div>
 
 		
@@ -116,7 +121,6 @@
 	<div id='footer'>
 		UC Berkeley School of Information.<br/>
 		INFO 247 Final Proejct, 2020<br/>
-		1. The <a href='https://github.com/echen102/COVID-19-TweetIDs'>COVID-19-TweetIDs</a> dataset was collected ias the Twitter API over the course of the pandemic. The dataset comprises 1% of the total Twitter converstaion, randomly selected by the Twitter API. <br/>
 	</div>
 
 </body>
