--- a/index.html
+++ b/index.html
@@ -85,10 +85,14 @@
 		<div id="HashtagsBarsRight" class='hbars'></div>
 		<div style="clear:both;"></div>
 
-	<!-- 	<div>
-			At first glance, it seems that #cpac2020, #trumpvirus, #trumpvirus, #trumpviruscoverup were the most popular hashtags in Twitter in March.
+		<div style='position: absolute;bottom: 30%;left: 50px;width: 300px;'>
+			<span style='font-size:4em;font-weight:bold;color:#8050bf'>13</span> out of <span style='font-size:2em;'>20</span> most tweeted hashtag pairs are politically charged.
 		</div>
- -->
+
+		<div style='position: absolute;bottom: 15%;right: 30px;width: 300px;'>
+			But only <span style='font-size:4em;font-weight:bold;color:#8050bf'>4</span> remain when duplicate posts by users are discounted.
+		</div>
+
 		<div class='footnotes' style='font-size:12px;margin:20px 0px;width:100%; text-align:center;'>
 			2. Matt Kapko, <a target="_blank" href="https://www.cio.com/article/3137513/twitters-impact-on-2016-presidential-election-is-unmistakable.html">Twitter's impact on 2016 presidential election is unmistakable</a>,<br/>
 			Grinberg et al, 2019. <a target="_blank" href="https://science.sciencemag.org/content/363/6425/374">Fake news on Twitter during the 2016 U.S. presidential election</a>
