--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</p>
 
 			<div class='footnotes' style='font-size:12px;margin:auto;width:100%; text-align:left;max-width:700px'>
-				1. The <a target="_blank" href='https://github.com/echen102/COVID-19-TweetIDs'>COVID-19-TweetIDs</a> dataset was collected ias the Twitter API over the course of the pandemic. The dataset comprises 1% of the total Twitter converstaion, randomly selected by the Twitter API. <br/>
+				1. The <a target="_blank" href='https://github.com/echen102/COVID-19-TweetIDs'>COVID-19-TweetIDs</a> dataset was collected via the Twitter API over the course of the pandemic. The dataset comprises 1% of the total Twitter converstaion, randomly selected by the Twitter API. <br/>
 			</div>
 		</div>
 	</div>
@@ -45,19 +45,18 @@
 	<!-- SENTIMENT PLOT -->
 	<div id='sentiment-context' class='context-container'>
 		<div class='content'>
-			<div style="float:left;width:50%">
+			<div style="float:left;width:60%">
 				<b>How does COVID-19 feel?</b>
 				Twitter users expressed a wide range of emotions about Covid19 in March.
 				<br/><br/>
-				The interactive map below reflects daily average sentiment scores in USA for every day of the month. Evidently, the <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>shelter in place</span> orders that came into effect in the middle of the month correlated with a systematic shift in sentiment across the country. 
+				The interactive map below reflects daily average sentiment scores in USA for every day of the month. Evidently, the <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>shelter in place</span> orders that came into effect in the middle of the month correlated with a systematic shift in sentiment across the country, with users tweeting more words like <span style='color:#f2bc27;font-weight:bold;'>grateful</span> and <span style='color:#f2bc27;font-weight:bold;'>beautiful</span> towards the end of the month.
 
 				<br/><br/>
 
 				Select <b>retweets</b> to find out what kind of content users tend to retweet more.
 			</div>
-			<div style="float:right;width:50%" id="SentimentTerms">
-				
-			</div>
+			<div style="float:right;width:40%" id="SentimentTerms"></div>
+
 			<div style="clear:both"></div>
 			
 		</div>	
@@ -78,7 +77,7 @@
 			<b>What did people talk about?</b> 
 			Conversations on Twitter are often <span style="background-color:#8050bf;color:white;font-weight:bold;padding:0px 3px;">politically charged</span>. Political discourse on social media is often polarized and prone to misinformation, which may have harmful effects in the public sphere<sup>2</sup>. <b>Who plays a role in facilitating these conversations?</b>
 			<br/><br/>
-			Looking at frequently occuring sequences of hashtags used when discussing COVID-19, we discovered that select accounts tend to re-use polarized hashtags multiple times over a short period of time.
+			Looking at frequently occuring sequences of hashtags used when discussing COVID-19, we find that select accounts tend to re-use polarized hashtags multiple times over a short period of time.
 
 		</div>
 		<div id="HashtagsBarsLeft" class='hbars'></div>
