working on hashtag graph

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 			</div>
 		</div>
 	</div>
+
+
 	<div id="TweetsByDay">
 		<p><b>How much did different states tweet about COVID-19 in March?</b> Hover over a state to see how many tweets mentioned COVID-19 for each date in the month of March.</p>
 		<div id="TweetsByDay-map"></div>
@@ -53,7 +55,7 @@
 
 				<br/><br/>
 
-				Select <b>retweets</b> to find out what kind of content users tend to retweet more.
+				Select <b>retweets</b> below to find out what kind of content users retweeted more.
 			</div>
 			<div style="float:right;width:40%" id="SentimentTerms"></div>
 
@@ -77,7 +79,7 @@
 			<b>What did people talk about?</b> 
 			Conversations on Twitter are often <span style="background-color:#8050bf;color:white;font-weight:bold;padding:0px 3px;">politically charged</span>. Political discourse on social media is often polarized and prone to misinformation, which may have harmful effects in the public sphere<sup>2</sup>. <b>Who plays a role in facilitating these conversations?</b>
 			<br/><br/>
-			Looking at frequently occuring sequences of hashtags used when discussing COVID-19, we find that select accounts tend to re-use polarized hashtags multiple times over a short period of time.
+			Looking at frequently occuring sequences of hashtags used when discussing COVID-19, we find that select <span style='color:#30c74b;font-weight:bold;'>accounts</span> tend to re-use polarized hashtags multiple times over a short period of time.
 
 		</div>
 		<div id="HashtagsBarsLeft" class='hbars'></div>
@@ -118,6 +120,7 @@
 		<div class='content'>
 			See how the topics are related to each other:
 		</div>
+		<div id="HashtagsLegend"></div>
 		<div id="HashtagsGraph"></div>
 	</div>
 
