--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 			<b>What did people talk about?</b> 
 			Conversations on Twitter are often <span style="background-color:#8050bf;color:white;font-weight:bold;padding:0px 3px;">politically charged</span>. Political discourse on social media is often polarized and prone to misinformation, which may have harmful effects in the public sphere<sup>2</sup>. <b>Who plays a role in facilitating these conversations?</b>
 			<br/><br/>
-			Looking at frequently occuring sequences of hashtags used when discussing COVID-19, we find that select <span style='color:#30c74b;font-weight:bold;'>accounts</span> tend to re-use polarized hashtags multiple times over a short period of time and flood the platform.
+			Ranking the top most frequently occuring sequences of <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>#hashtags</span> used when discussing COVID-19, we find that select <span style='color:#30c74b;font-weight:bold;'>accounts</span> tend to re-use polarized hashtags multiple times over a short period of time and flood the platform.
 
 		</div>
 		<div id="HashtagsBarsLeft" class='hbars'></div>
@@ -106,9 +106,9 @@
 	<div id="TopicsGraph">
 		<div class='content' id='hashtags-context'>
 			<div style="float:right;width:48%;padding:0% 1%;">
-				Drawing connections between <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>#hashtags</span> that are often used in tweets together and making use of some <i>neat clustering alrothims</i>, we can form a build a network graph of the #COVID-19 convesation. Exploring how the hashtags are connected to each other exposes the diverse conversational <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>threads</span>.
+				Drawing connections between <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>#hashtags</span> that are often used in tweets together and making use of some <i>neat clustering alrothims</i>, we can form a build a network graph of the #COVID-19 convesation. Exploring how the hashtags are connected to each other exposes the diverse conversational <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>threads</span> that make up the main #COVID-19 converstaion.
 				<br/><br/>
-				<b>Hover over the words in the graph below to explore how the hashtags are connected to each other </b> 
+				<b>Hover over words in the graph below to explore how the hashtags are connected to each other </b> 
 			</div>
 			<div id="HashtagsLegend" style="float:left;width:50%"></div>
 			<div style="clear:both"></div>
@@ -121,9 +121,23 @@
 	<!-- TIMELINE PLOT -->
 	<div id='topics-context' class='context-container'>
 		<div class='content'>
-			Who are these people who are tweeting the same hashtags over ad over again? Could they be bots? 
-			To investigate deeper, we filtered out the top 50 topics (by volume) and ranked them based on the number of tweets mentioning the hashtags in each cluster per day.
-			Check it out.
+			<div style="float:left;width:48%;padding:0% 1%;">
+				By tagging tweets with specific <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>#hashtags</span>, users participate in the emerging conversations aroung these <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>threads</span>.
+				To further understand how each thread ties into the main conversation, we can look at the relative amount of <i>attention</i> users assign to it.
+				<br/><br/>
+				<b>What were the most <i>buzzing</i> #COVID-19 threads on Twitter every day in March?</b>
+
+			</div>
+			<div style="float:left;width:48%;padding:0% 1%;">
+				We filtered out the <b>top 50 most discussed threads</b> and <i>ranked</i> them based on the number of #hashtags tweeted to the topic each day. In the plot below, we evaluate the relative importance of the most popular #COVID_19 each day in March.
+				<br/><br/>
+				Hover over the <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>thread labels</span> to explpore each one separately.
+			</div>
+			<div style="float:left;width:100%;text-align:center;margin:20px auto;">
+				
+			</div>
+
+			<!-- Importance here is defined by the amount of attention a topic recieves. -->
 		</div>
 	</div>
 
@@ -135,6 +149,8 @@
 	<div id='footer'>
 		UC Berkeley School of Information.<br/>
 		INFO 247 Final Proejct, 2020<br/>
+		Masha Belyi, Cameron Lopez, Joanne Jia
+		<br/><br/>
 	</div>
 
 </body>
