--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 			</div>
 			<div style="float:left;width:48%;padding:0% 1%;">
-				We filtered out the <b>top 50 most discussed threads</b> and <i>ranked</i> them based on the number of #hashtags tweeted to the topic each day. In the plot below, we evaluate the relative importance of the most popular #COVID_19 each day in March.
+				We filtered out the <b>top 50 most discussed threads</b> and <i>ranked</i> them based on the number of #hashtags tweeted to the topic each day. In the plot below, we evaluate the relative importance of the most popular #COVID-19 thread each day in March.
 				<br/><br/>
 				Hover over the <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>thread labels</span> to explore each one separately.
 			</div>
