attribute twitter design

--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@
 
 	<div id="CovidTopicsTimeline"></div>
 
+	<div class='footnotes' style='font-size:12px;margin:20px 0px;width:100%; text-align:center;'>
+		Design for this visualization was borrowed form <a href="https://interactive.twitter.com/candidateRace16/">#Election2016: US Presidential Candidate Twitter Buzz</a>
+	</div>
+
 
 	
 
