updated data sources

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 	<div id="TopicsGraph">
 		<div class='content' id='hashtags-context'>
 			<div style="float:right;width:48%;padding:0% 1%;">
-				Connecting <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>#hashtags</span> that often appear in tweets together and making use of some <i><a href='https://arxiv.org/pdf/0709.2938.pdf' targe="blank">neat clustering alrothims</a></i>, we can build a network graph of the #COVID-19 Twitter discourse. Exploring how the hashtags are connected to each other exposes the diverse <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>threads</span> that make up the main #COVID-19 converstaion.
+				Connecting <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>#hashtags</span> that often appear in tweets together and making use of a <i><a href='https://arxiv.org/pdf/0709.2938.pdf' target="blank">neat clustering alrothim</a></i>, we can build a network graph of the #COVID-19 Twitter discourse. Exploring how the hashtags are connected to each other exposes the diverse <span style='background-color:#000000; font-weight:bold; color:white;padding:0px 3px;'>threads</span> that make up the main #COVID-19 converstaion.
 				<br/><br/>
-				<b>Hover over words in the graph below to explore how the hashtags are connected to each other </b> 
+				<b>Hover over #hashtags in the graph below to explore how they are connected to each other.</b> 
 			</div>
 			<div id="HashtagsLegend" style="float:left;width:50%"></div>
 			<div style="clear:both"></div>
