added meta to page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <html>
 <head>
+	<title>#COVID19 Discourse on Twitter</title>
+	<meta property=og:title content="#COVID19 Discourse on Twitter">
+	<meta property=og:image content=img/page-image.png>
+	<meta name="description" content="Sentiment and topic clustering analysis of COVID-19 tweets in the USA, March 2020. ">
+	<link rel="icon" type="image/png" href="img/favicon/favicon-16x16.png">
+	<meta name="keywords" content="covid-19 covid19 coronavirus twitter social media infodemic sentiment">
+	<meta name="author" content="Masha Belyi">
+
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 	<script src="https://d3js.org/topojson.v1.min.js"></script>
 
